--- a/document/_output.yml
+++ b/document/_output.yml
@@ -5,16 +5,15 @@ bookdown::gitbook:
       before: |
         <li><a href="./">Modeling Melodic Dictation</a></li>
       after: |
-        <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
-    edit: https://github.com/rstudio/bookdown-demo/edit/master/%s
+        <li><a href="https://github.com/davidjohnbaker1/document" target="blank">Modeling Melodic Dictation</a></li>
     download: ["pdf", "epub"]
-    toc_depth: 3
+    toc_depth: 2
 bookdown::pdf_book:
   includes:
     in_header: preamble.tex
   latex_engine: xelatex
   citation_package: natbib
   keep_tex: yes
-  toc_depth: 3
+  toc_depth: 2
 bookdown::epub_book: default
 
